Determining Command Structure, define